// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`app/panel/components/BuildingBlocks/RewardListItem.jsx Snapshot tests with react-test-renderer reward list item is rendered correctly 1`] = `
<a
  className="RewardListItem row clickable"
  href="/detail/rewards/detail/test_reward_id"
  onClick={[Function]}
>
  <div
    className="flex-container align-middle full-height full-width"
  >
    <div
      className="RewardListItem__image_container"
    >
      <img
        className="RewardListItem__image"
        src="https://www.ghostery.com/wp-content/themes/ghostery/images/ghostery_logo.svg"
      />
    </div>
    <div
      className="flex-grow"
    >
      <div
        className="RewardListItem__text"
      >
        test reward title
      </div>
      <div
        className="RewardListItem__expires"
      >
        rewards_expires_in
      </div>
    </div>
    <div
      className="flex-container align-justify flex-dir-column full-height"
    >
      <div
        className="RewardListItem__close_button clickable"
        onClick={[Function]}
      >
        <svg
          fillRule="evenodd"
          height="10"
          width="10"
        >
          <path
            d="M6.719 5l2.923-2.924A1.216 1.216 0 0 0 7.924.356L5 3.281 2.076.356a1.216 1.216 0 1 0-1.72 1.72L3.28 5 .356 7.924a1.216 1.216 0 0 0 1.719 1.72L5 6.719l2.924 2.923a1.216 1.216 0 1 0 1.72-1.719L6.719 5z"
          />
        </svg>
      </div>
      <div
        className="RewardListItem__details_link"
      >
        <svg
          fillRule="evenodd"
          height="16"
          width="10"
        >
          <path
            d="M0 13.881l1.892 1.833L10 7.857 1.892 0 0 1.833l6.216 6.024z"
          />
        </svg>
      </div>
    </div>
  </div>
</a>
`;

exports[`app/panel/components/BuildingBlocks/RewardListItem.jsx Snapshot tests with react-test-renderer reward list item is rendered correctly when disabled 1`] = `
<a
  className="RewardListItem row RewardListItem--greyscale not-clickable"
  href="/detail/rewards/detail/test_reward_id"
  onClick={[Function]}
>
  <div
    className="flex-container align-middle full-height full-width"
  >
    <div
      className="RewardListItem__image_container"
    >
      <img
        className="RewardListItem__image"
        src="https://www.ghostery.com/wp-content/themes/ghostery/images/ghostery_logo.svg"
      />
    </div>
    <div
      className="flex-grow"
    >
      <div
        className="RewardListItem__text"
      >
        test reward title
      </div>
      <div
        className="RewardListItem__expires"
      >
        rewards_expires_in
      </div>
    </div>
    <div
      className="flex-container align-justify flex-dir-column full-height"
    >
      <div
        className="RewardListItem__close_button clickable"
        onClick={[Function]}
      >
        <svg
          fillRule="evenodd"
          height="10"
          width="10"
        >
          <path
            d="M6.719 5l2.923-2.924A1.216 1.216 0 0 0 7.924.356L5 3.281 2.076.356a1.216 1.216 0 1 0-1.72 1.72L3.28 5 .356 7.924a1.216 1.216 0 0 0 1.719 1.72L5 6.719l2.924 2.923a1.216 1.216 0 1 0 1.72-1.719L6.719 5z"
          />
        </svg>
      </div>
      <div
        className="RewardListItem__details_link"
      >
        <svg
          fillRule="evenodd"
          height="16"
          width="10"
        >
          <path
            d="M0 13.881l1.892 1.833L10 7.857 1.892 0 0 1.833l6.216 6.024z"
          />
        </svg>
      </div>
    </div>
  </div>
</a>
`;

exports[`app/panel/components/BuildingBlocks/RewardListItem.jsx Snapshot tests with react-test-renderer reward list item is rendered correctly when disabled, unread, and elongated 1`] = `
<a
  className="RewardListItem row RewardListItem--greyscale RewardListItem--unread RewardListItem--elongated not-clickable"
  href="/detail/rewards/detail/test_reward_id"
  onClick={[Function]}
>
  <div
    className="flex-container align-middle full-height full-width"
  >
    <div
      className="RewardListItem__image_container"
    >
      <img
        className="RewardListItem__image"
        src="https://www.ghostery.com/wp-content/themes/ghostery/images/ghostery_logo.svg"
      />
    </div>
    <div
      className="flex-grow"
    >
      <div
        className="RewardListItem__text"
      >
        test reward title
      </div>
      <div
        className="RewardListItem__expires"
      >
        rewards_expires_in
      </div>
    </div>
    <div
      className="flex-container align-justify flex-dir-column full-height"
    >
      <div
        className="RewardListItem__close_button clickable"
        onClick={[Function]}
      >
        <svg
          fillRule="evenodd"
          height="10"
          width="10"
        >
          <path
            d="M6.719 5l2.923-2.924A1.216 1.216 0 0 0 7.924.356L5 3.281 2.076.356a1.216 1.216 0 1 0-1.72 1.72L3.28 5 .356 7.924a1.216 1.216 0 0 0 1.719 1.72L5 6.719l2.924 2.923a1.216 1.216 0 1 0 1.72-1.719L6.719 5z"
          />
        </svg>
      </div>
      <div
        className="RewardListItem__details_link"
      >
        <svg
          fillRule="evenodd"
          height="16"
          width="10"
        >
          <path
            d="M0 13.881l1.892 1.833L10 7.857 1.892 0 0 1.833l6.216 6.024z"
          />
        </svg>
      </div>
    </div>
  </div>
</a>
`;

exports[`app/panel/components/BuildingBlocks/RewardListItem.jsx Snapshot tests with react-test-renderer reward list item is rendered correctly when elongated 1`] = `
<a
  className="RewardListItem row RewardListItem--elongated clickable"
  href="/detail/rewards/detail/test_reward_id"
  onClick={[Function]}
>
  <div
    className="flex-container align-middle full-height full-width"
  >
    <div
      className="RewardListItem__image_container"
    >
      <img
        className="RewardListItem__image"
        src="https://www.ghostery.com/wp-content/themes/ghostery/images/ghostery_logo.svg"
      />
    </div>
    <div
      className="flex-grow"
    >
      <div
        className="RewardListItem__text"
      >
        test reward title
      </div>
      <div
        className="RewardListItem__expires"
      >
        rewards_expires_in
      </div>
    </div>
    <div
      className="flex-container align-justify flex-dir-column full-height"
    >
      <div
        className="RewardListItem__close_button clickable"
        onClick={[Function]}
      >
        <svg
          fillRule="evenodd"
          height="10"
          width="10"
        >
          <path
            d="M6.719 5l2.923-2.924A1.216 1.216 0 0 0 7.924.356L5 3.281 2.076.356a1.216 1.216 0 1 0-1.72 1.72L3.28 5 .356 7.924a1.216 1.216 0 0 0 1.719 1.72L5 6.719l2.924 2.923a1.216 1.216 0 1 0 1.72-1.719L6.719 5z"
          />
        </svg>
      </div>
      <div
        className="RewardListItem__details_link"
      >
        <svg
          fillRule="evenodd"
          height="16"
          width="10"
        >
          <path
            d="M0 13.881l1.892 1.833L10 7.857 1.892 0 0 1.833l6.216 6.024z"
          />
        </svg>
      </div>
    </div>
  </div>
</a>
`;

exports[`app/panel/components/BuildingBlocks/RewardListItem.jsx Snapshot tests with react-test-renderer reward list item is rendered correctly when unread 1`] = `
<a
  className="RewardListItem row RewardListItem--unread clickable"
  href="/detail/rewards/detail/test_reward_id"
  onClick={[Function]}
>
  <div
    className="flex-container align-middle full-height full-width"
  >
    <div
      className="RewardListItem__image_container"
    >
      <img
        className="RewardListItem__image"
        src="https://www.ghostery.com/wp-content/themes/ghostery/images/ghostery_logo.svg"
      />
    </div>
    <div
      className="flex-grow"
    >
      <div
        className="RewardListItem__text"
      >
        test reward title
      </div>
      <div
        className="RewardListItem__expires"
      >
        rewards_expires_in
      </div>
    </div>
    <div
      className="flex-container align-justify flex-dir-column full-height"
    >
      <div
        className="RewardListItem__close_button clickable"
        onClick={[Function]}
      >
        <svg
          fillRule="evenodd"
          height="10"
          width="10"
        >
          <path
            d="M6.719 5l2.923-2.924A1.216 1.216 0 0 0 7.924.356L5 3.281 2.076.356a1.216 1.216 0 1 0-1.72 1.72L3.28 5 .356 7.924a1.216 1.216 0 0 0 1.719 1.72L5 6.719l2.924 2.923a1.216 1.216 0 1 0 1.72-1.719L6.719 5z"
          />
        </svg>
      </div>
      <div
        className="RewardListItem__details_link"
      >
        <svg
          fillRule="evenodd"
          height="16"
          width="10"
        >
          <path
            d="M0 13.881l1.892 1.833L10 7.857 1.892 0 0 1.833l6.216 6.024z"
          />
        </svg>
      </div>
    </div>
  </div>
</a>
`;
